syntax = "proto3";

option csharp_namespace = "DataAcquisitionSystemModbusProtocol.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";
import "google/protobuf/timestamp.proto";
import "analogicVariable.proto";
import "digitalVariable.proto";

service Sample
{
	rpc CreateSample (CreateSampleRequest) returns (SampleDTO);
	rpc GetSample (GetRequest) returns (NullableSampleDTO);
	rpc GetAllSamples (google.protobuf.Empty) returns (Samples);
	rpc UpdateSample (SampleDTO) returns (google.protobuf.Empty);
	rpc DeleteSample (DeleteRequest) returns (google.protobuf.Empty);
}

message SampleDTO
{
	string id = 1;
	double sampleValue = 2;
	google.protobuf.Timestamp sampleDateTime = 3;
	Variable variable = 4;
}

message Samples
{
	repeated SampleDTO items = 1;
}

message NullableSampleDTO
{
	oneof kind
	{
		google.protobuf.NullValue null = 1;
		SampleDTO sample = 2;
	}
}

message Variable
{
	oneof kind
	{
		AnalogicVariableDTO analogicVariable = 1;
		DigitalVariableDTO digitalVariable = 2;
	}
}

message CreateSampleRequest
{
	double sampleValue = 1;
	google.protobuf.Timestamp sampleDateTime = 2;
}